# agin-ci

./: .dockerignore  .gitignore  Caddyfile  Cargo.toml  README.md  compose.yaml  generate-api-client.sh
aginci_core/: Cargo.toml
aginci_core/src/: lib.rs  pulsar.rs  runner_messages.rs  workflow.rs
aginci_core/src/runner_messages/: auth.rs  report_progress.rs
aginci_core/src/workflow/: step_executor.rs  steps.rs  triggers.rs
aginci_core/src/workflow/steps/: build.rs  checkout.rs  restore_cache.rs  run.rs  save_cache.rs  upload_artifact.rs
api_client/: Cargo.toml  README.md
api_client/.openapi-generator/: FILES
api_client/docs/: AccessTokenCreateBody.md  AccessTokenCreateResponse.md  AuthApi.md  CreateOrgSecretBody.md  CreateProjectBody.md  CreateProjectBodyRepository.md  CreateSuccess.md  Detailed.md  DetailedInvitationEvent.md  DetailedJobFail.md  DetailedOfflineWorker.md  DetailedOneOf.md  DetailedOneOf1.md  DetailedOneOf2.md  DetailedOneOf3.md  DetailedOneOf4.md  DetailedRoleChange.md  EditNotificationBody.md  EditOrgSecretBody.md  EditRoleBody.md  EditServerRoleBody.md  FinishRegistrationBody.md  FinishRegistrationResponse.md  ForbiddenError.md  GodModeApi.md  GodModeBody.md  GodModeStatus.md  HostOs.md  Invitation.md  InvitationStatus.md  Member.md  Membership.md  MutableOrganization.md  NotificationDetailed.md  NotificationRecipient.md  NotificationStatus.md  NotificationsApi.md  Organization.md  OrganizationApi.md  OrganizationRole.md  (+29 more)
api_client/src/: lib.rs
api_client/src/apis/: auth_api.rs  configuration.rs  god_mode_api.rs  mod.rs  notifications_api.rs  organization_api.rs  organizations_api.rs  other_api.rs  project_api.rs  projects_api.rs  schema_api.rs  secrets_api.rs  system_api.rs  tokens_api.rs  webhook_handlers_api.rs
api_client/src/models/: access_token_create_body.rs  access_token_create_response.rs  create_org_secret_body.rs  create_project_body.rs  create_project_body_repository.rs  create_success.rs  detailed.rs  detailed_invitation_event.rs  detailed_job_fail.rs  detailed_offline_worker.rs  detailed_one_of.rs  detailed_one_of_1.rs  detailed_one_of_2.rs  detailed_one_of_3.rs  detailed_one_of_4.rs  detailed_role_change.rs  edit_notification_body.rs  edit_org_secret_body.rs  edit_role_body.rs  edit_server_role_body.rs  finish_registration_body.rs  finish_registration_response.rs  forbidden_error.rs  god_mode_body.rs  god_mode_status.rs  host_os.rs  invitation.rs  invitation_status.rs  member.rs  membership.rs  mod.rs  mutable_organization.rs  notification_detailed.rs  notification_recipient.rs  notification_status.rs  organization.rs  organization_role.rs  permission.rs  project_repository_source.rs  public_project.rs  (+17 more)
cli/: Cargo.toml
cli/.aginci/workflows/: build.yaml
cli/src/: api.rs  config.rs  errors.rs  formatter.rs  main.rs  report_handler.rs  utils.rs
cli/src/commands/: auth.rs  run.rs
cli/src/commands/auth/: login.rs  logout.rs  whoami.rs
container_runner/: Cargo.toml
container_runner/src/: main.rs  runner.rs  socket.rs
docs/: mdx-components.tsx  package.json  pnpm-lock.yaml
docs/app/: layout.config.tsx
docs/app/(docs)/: layout.tsx  page.tsx
docs/components/: mermaid.tsx
docs/lib/: source.ts
docs/scripts/: generate-docs.mjs
git_providers/: Cargo.toml  README.md
git_providers/src/: git_provider.rs  lib.rs  providers.rs  webhook_actions.rs
git_providers/src/providers/: gitea.rs  github.rs
librunner/: Cargo.toml
librunner/src/: lib.rs  require_auth.rs  session.rs  socket.rs  tokens_manager.rs
librunner/src/socket/: get_job.rs  report_progress.rs
mongo_utils/: Cargo.toml
mongo_utils/mongo_utils_derive/: Cargo.toml
mongo_utils/mongo_utils_derive/src/: lib.rs
mongo_utils/src/: lib.rs
node_runner/: Cargo.toml
node_runner/src/: auth.rs  config.rs  handler.rs  main.rs  pulsar_client.rs
server/: Cargo.toml  Dockerfile
server/src/: axum_error.rs  database.rs  job_manager.rs  main.rs  middlewares.rs  mongo_id.rs  notifications.rs  pulsar_client.rs  routes.rs  runner.rs  settings.rs  state.rs  utils.rs  validators.rs
server/src/job_manager/: dispatcher.rs
server/src/middlewares/: require_auth.rs  require_org_permissions.rs  require_server_permissions.rs
server/src/notifications/: detailed.rs  sender.rs  simple.rs
server/src/routes/: api.rs
server/src/routes/api/: god.rs  health.rs  login.rs  notifications.rs  organizations.rs  schema.rs  system.rs  tokens.rs  user.rs  webhook_handler.rs  webhooks.rs
server/src/routes/api/notifications/: notification_id.rs
server/src/routes/api/organizations/: org_id.rs  org_slug.rs
server/src/routes/api/organizations/org_slug/: members.rs  projects.rs  secrets.rs
server/src/routes/api/organizations/org_slug/members/: member_id.rs
server/src/routes/api/organizations/org_slug/projects/: project_slug.rs
server/src/routes/api/organizations/org_slug/projects/project_slug/: access_token.rs  regenerate_keys.rs  regenerate_webhook_secret.rs
server/src/routes/api/organizations/org_slug/secrets/: secret_id.rs
server/src/routes/api/schema/: workflow.rs
server/src/routes/api/system/: runners.rs  users.rs
server/src/routes/api/system/runners/: register.rs  runner_id.rs
server/src/routes/api/system/runners/register/: finish.rs
server/src/routes/api/system/users/: user_id.rs
server/src/routes/api/webhook_handler/: common.rs  gitea.rs  github.rs
server/src/routes/api/webhooks/: common.rs  project_id.rs
server/src/routes/api/webhooks/project_id/: gitea.rs  github.rs
web/: eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/app/: layout.tsx  page.tsx
web/components/: app-sidebar.tsx  data-table.tsx  logo.tsx  nav-main-item.tsx  nav-main.tsx  nav-projects.tsx  nav-secondary.tsx  nav-user.tsx  org-sidebar.tsx  org-switcher.tsx  organization.tsx  page-header.tsx  project-sidebar.tsx  role-selector.tsx  server-role-selector.tsx  sidebar-common.ts
web/lib/: constants.ts  themes.ts  utils.ts
web/types/: api.d.ts  org-role.ts  server-role.ts
worker/: Cargo.toml
(+101 files in other folders)
