[package]
name = "aginci_core"
version = "0.1.0"
edition = "2024"

[features]
default = ["step_executor"]
step_executor = ["tokio", "tracing"]
tokio = ["dep:tokio"]

[dependencies]
async-trait = "0.1.88"
color-eyre = "0.6.5"
enum_dispatch = "0.3.13"
paste = "1.0.15"
schemars = { version = "1.0.4", features = ["preserve_order"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"], optional = true }
tracing = { version = "0.1.41", optional = true }
visible = "0.0.1"
