[package]
name = "aginci_core"
version = "0.1.0"
edition = "2024"

[features]
default = ["step_executor", "reader"]
step_executor = ["tokio", "dep:tracing"]
reader = ["tokio", "serde_yaml"]
tokio = ["dep:tokio"]
utoipa = ["dep:utoipa"]

[dependencies]
async-trait = "0.1.88"
base64 = "0.22.1"
color-eyre = "0.6.5"
enum_dispatch = "0.3.13"
paste = "1.0.15"
rand = "0.9.2"
schemars = { version = "1.0.4", features = ["preserve_order"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = { version = "0.9.34", optional = true }
tokio = { version = "1.46.1", features = ["full"], optional = true }
tracing = { version = "0.1.41", optional = true }
utoipa = { version = "5.4.0", optional = true }
visible = "0.0.1"
