[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "aginci"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
color-eyre = "0.6.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_yaml = "0.9.34"
tokio = { version = "1.46.1", features = ["full"] }
