[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "aginci"
path = "src/main.rs"

[dependencies]
api_client = { version = "1.0.0", path = "../api_client" }
clap = { version = "4.5.41", features = ["derive"] }
directories = "6.0.0"
inquire = "0.7.5"
keyring = { version = "3.6.2", features = ["tokio", "apple-native", "async-secret-service", "linux-native-async-persistent", "windows-native"] }
librunner = { version = "0.1.0", path = "../librunner" }
miette = { version = "7.6.0", features = ["fancy"] }
owo-colors = "4.2.2"
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.9.2"
