[package]
name = "container_runner"
version = "0.1.0"
edition = "2024"

[dependencies]
aginci_core = { version = "0.1.0", path = "../aginci_core" }
color-eyre = "0.6.5"
reqwest = "0.12.22"
rust_socketio = { version = "0.6.0", features = ["async"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = [
    "chrono",
    "json",
    "env-filter",
    "local-time",
    "serde",
    "serde_json",
    "time",
] }
url = "2.5.4"
v = "0.1.0"
