[package]
name = "librunner"
version = "0.1.0"
edition = "2024"

[dependencies]
aginci_core = { version = "0.1.0", path = "../aginci_core" }
axum = "0.8.4"
bollard = "0.19.1"
color-eyre = "0.6.5"
futures-util = "0.3.31"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
socketioxide = { version = "0.17.2", features = [
    "state",
    "tracing",
    "extensions",
] }
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["v4"] }
