[package]
name = "node_runner"
version = "0.1.0"
edition = "2024"

[dependencies]
aginci_core = { version = "0.1.0", path = "../aginci_core" }
bollard = "0.19.1"
color-eyre = "0.6.5"
librunner = { version = "0.1.0", path = "../librunner" }
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = [
    "chrono",
    "json",
    "env-filter",
    "local-time",
    "serde",
    "serde_json",
    "time",
] }
uuid = { version = "1.17.0", features = ["v4"] }
