[package]
name = "node_runner"
version = "0.1.0"
edition = "2024"

[dependencies]
aginci_core = { version = "0.1.0", path = "../aginci_core", features = [
    "pulsar",
] }
api_client = { version = "1.0.0", path = "../api_client" }
bollard = "0.19.1"
color-eyre = "0.6.5"
dotenvy = "0.15.7"
futures = "0.3.31"
librunner = { version = "0.1.0", path = "../librunner" }
pulsar = "6.3.1"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.9.5"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = [
    "chrono",
    "json",
    "env-filter",
    "local-time",
    "serde",
    "serde_json",
    "time",
] }
uuid = { version = "1.17.0", features = ["v4"] }
